Compiling using java 11